use ONTOVIEWER_TOOLKIT_JAVA instead of ONTOVIEWER_TOOLKIT_JAR
Signed-off-by: Przemysław Grądzki <przemek.gradzki@gmail.com>